<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.main.ui.karyawan.KaryawanFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_karyawan_pic_sto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/karyawan_pic_stock_control"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_karyawan_pic_pre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/karyawan_pic_prepare_suplay"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_karyawan_pic_oe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:text="@string/karyawan_pic_oe_setting"
        android:textSize="16sp" />

</LinearLayout>