<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetEditProfilePass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_background"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/titleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePassword"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiOldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleInput"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconContentDescription="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiOldPassword"
        android:layout_marginTop="6dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconContentDescription="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNewPasswordAgain"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiNewPassword"
        android:layout_marginTop="6dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconContentDescription="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_again"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiNewPasswordAgain"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_toStartOf="@id/btnSave"
        android:text="@string/cancelBottomSheet" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiNewPasswordAgain"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tiNewPasswordAgain"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:text="@string/saveBottomSheet" />
</RelativeLayout>