<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.ui.stock.detail.DetailStockBarangFragment">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/neview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/neview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_code_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusableInTouchMode="true"
                android:hint="@string/code_size2"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconContentDescription="Code Size"
                app:startIconDrawable="@drawable/ic_text_fields">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_code_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusableInTouchMode="true"
                android:hint="@string/quantity2"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconContentDescription="Quantity"
                app:startIconDrawable="@drawable/ic_text_fields">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:startIconContentDescription="Weekly"
                app:startIconDrawable="@drawable/ic_text_fields">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_weekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weekly2"
                    android:inputType="number|numberDecimal"
                    android:lines="1"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusableInTouchMode="false"
                android:hint="@string/tanggal"
                app:startIconContentDescription="@string/tanggal"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/save"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>