<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    tools:context=".view.auth.AuthActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:focusableInTouchMode="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_login"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeText"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_NIK"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="18dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/nik"
                    app:endIconMode="clear_text"
                    app:startIconContentDescription="NIK"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_NIK"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:startIconContentDescription="Password"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvFailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="NIK atau Password Yang Anda Masukkan Salah" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>